<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_new_game"
            android:title="@string/menu_new_game"
            android:icon="@drawable/ic_start_game_black"/>

        <item
            android:id="@+id/nav_how_to"
            android:title="@string/menu_how_to"
            android:icon="@drawable/ic_help"
            />

        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile"
            android:icon="@drawable/ic_profile"/>

        <item
            android:id="@+id/nav_saved_games"
            android:title="@string/menu_games_list"
            android:icon="@drawable/ic_saved_game"/>



    </group>

</menu>