<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateTeamsFragment"
    android:background="@drawable/gradient_background">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/teams_card_animation"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/vs_teams" />

        <TextView
            android:id="@+id/teams_card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/teams_card_animation"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/update_teams_fragment_title"
            android:fontFamily="@font/alfa_slab_one"/>

        <LinearLayout
            android:id="@+id/home_name_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/teams_card_title"
            android:layout_margin="8dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_teams_fragment_home_team"
                android:textSize="20sp"
                android:background="@drawable/white_stroke_style"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:fontFamily="@font/alfa_slab_one"

                />

            <EditText
                android:id="@+id/home_team_name_update"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_gravity="start"
                android:inputType="textCapWords"
                android:hint="@string/update_teams_fragment_home_hint"
                android:fontFamily="@font/alfa_slab_one"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/away_team_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/home_name_edit_layout"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_teams_fragment_away_team"
                android:textSize="20sp"
                android:background="@drawable/white_stroke_style"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:fontFamily="@font/alfa_slab_one"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>

            <EditText
                android:id="@+id/away_team_name_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:layout_gravity="start"
                android:inputType="textCapWords"
                android:hint="@string/update_teams_fragment_away_hint"
                android:fontFamily="@font/alfa_slab_one"
                />

        </LinearLayout>

        <Button
            android:id="@+id/team_card_update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="8dp"
            android:text="@string/update_teams_fragment_update_button"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/away_team_edit_layout"
            android:background="@drawable/gradient_button_background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:fontFamily="@font/alfa_slab_one"
            />

        <Button
            android:id="@+id/skip_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_card_update_button"
            android:background="@drawable/gradient_button_background"
            android:text="@string/update_teams_fragment_skip_button"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/alfa_slab_one"
            android:gravity="center" />

    </RelativeLayout>

