<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".GameCounterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:padding="4dp"
                android:text="@string/game_counter_fragment_home_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/home_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/gradient_button_background"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/game_counter_fragment_zero_text"
                android:textColor="@color/white"
                android:textSize="56sp" />

            <Button
                android:id="@+id/home_goal_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_game_counter_button"
                android:text="@string/game_counter_fragment_goal_button"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/home_fouls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/gradient_background"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/game_counter_fragment_zero_text"
                android:textColor="@color/white"
                android:textSize="56sp" />

            <Button
                android:id="@+id/home_foul_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_game_counter_button"
                android:text="@string/game_counter_fragment_foul_button"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="330dp"
            android:background="@android:color/darker_gray"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/away_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:padding="4dp"
                android:text="@string/game_counter_fragment_away_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/away_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/gradient_button_background"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/game_counter_fragment_zero_text"
                android:textColor="@color/white"
                android:textSize="56sp" />

            <Button
                android:id="@+id/away_goal_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_game_counter_button"
                android:text="@string/game_counter_fragment_goal_button"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/away_fouls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/gradient_background"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/game_counter_fragment_zero_text"
                android:textColor="@color/white"
                android:textSize="56sp" />

            <Button
                android:id="@+id/away_foul_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_game_counter_button"
                android:text="@string/game_counter_fragment_foul_button"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/reset_button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/game_counter_fragment_save_game_button"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/game_counter_fragment_reset_button"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>
